--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -5,42 +5,28 @@
     margin-bottom: 20px;
 }
 
-.float-left {
-    margin-top: 20px;
-    margin-right: 10px; /* Add space between "Show" and "Search" */
-}
-.float-right {
-    margin-top: 20px;
-    margin-right: 320px;
-}
-
-.search-container {
-    margin-right: 10px; /* Push the search container to the left */
-}
-
 .filter-sort-group {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
 
-.filter-container,
-.sort-container {
-    margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
+.filter-container{
+    margin: 0; 
+    padding: 0; 
 }
 
 .filter-container {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-bottom: 10px; /* Add space between filter and sort containers */
+    margin-bottom: 10px; 
 }
 
 .price-labels {
     display: flex;
     justify-content: space-between;
-    width: 210px; /* Ensure same width as Slider */
+    width: 210px; 
     margin-bottom: 0px;
     margin-right: 0px;
 }
@@ -52,8 +38,8 @@
 
 .slider-button-group {
     display: flex;
-    flex-direction: row; /* Arrange elements horizontally */
-    align-items: flex-end; /* Align elements to the right */
+    flex-direction: row; 
+    align-items: flex-end; 
 }
 
 .price-slider {
@@ -62,7 +48,7 @@
 }
 
 .filter-button {
-    margin-left: 10px; /* Add space between slider and button */
+    margin-left: 10px; 
     padding: 5px 10px;
     background-color: #007bff;
     color: white;
@@ -73,12 +59,6 @@
 
 .filter-button:hover {
     background-color: #0056b3;
-}
-
-.sort-container {
-    display: flex;
-    align-items: center;
-    margin-top: 0px;
 }
 
 .sort-button {
